<resources>
    <string name="app_name">Lidl</string>
    <string name="pb">Považská Bystrica</string>
    <string name="open">Opening hours:</string>
    <string name="address">Address:</string>
    <string name="city">Town:</string>
    <string name="setAddress">Centrum 3/5</string>
    <string name="hours">07 - 20</string>
    <string name="tNumber">0800 005 095</string>
    <string name="info">Lidl is a self-service shop offering a wide variety of food and household products, organized into aisles. It is larger and has a wider selection than a traditional grocery store, but is smaller and more limited in the range of merchandise than a hypermarket or big-box market.</string>
</resources>
