<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context="com.example.android.oapb.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                style="@style/image"
                android:src="@drawable/lidl" />


            <TextView
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/app_name" />


            <LinearLayout style="@style/linear">

                <TextView
                    style="@style/title"
                    android:text="@string/city" />

                <TextView
                    style="@style/description"
                    android:text="@string/pb" />
            </LinearLayout>


            <LinearLayout style="@style/linear">

                <TextView
                    style="@style/title"
                    android:text="@string/address" />

                <TextView
                    style="@style/description"
                    android:text="@string/setAddress" />
            </LinearLayout>


            <LinearLayout
                style="@style/linear"
                android:background="@color/back">

                <ImageView
                    android:layout_width="@dimen/width"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/two"
                    android:padding="@dimen/padding"
                    android:scaleType="center"
                    android:src="@drawable/phone" />

                <TextView
                    style="@style/description"
                    android:layout_width="@dimen/width"
                    android:layout_weight="@dimen/three"
                    android:text="@string/tNumber" />
            </LinearLayout>


            <LinearLayout style="@style/linear">

                <TextView
                    style="@style/title"
                    android:text="@string/open" />

                <TextView
                    style="@style/description"
                    android:text="@string/hours" />
            </LinearLayout>


            <ImageView
                style="@style/image"
                android:src="@drawable/zpece" />

            <TextView
                style="@style/description"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/info" />

            <ImageView
                style="@style/image"
                android:src="@drawable/regal" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
